<resources>

    <string name="my_email">murilo.kta.leo@gmail.com</string>
    <string name="my_password">123456</string>
    <string name="app_name">InstagramIsh</string>
    <string name="password">Password</string>
    <string name="app_typography">Instagram(Ish)</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">E-mail</string>
    <string name="confirm">Confirm</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="missing_password_toast">Fill your password</string>
    <string name="missing_email_toast">Fill your e-mail first!</string>
    <string name="missing_password_confirmation_toast">Confirm your password first!</string>
    <string name="missing_all_toast">Fill all the fields above first</string>
</resources>