<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtLoginAppLogo"
            style="@style/txt_instagram_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/tilRegEmail"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilRegEmail"
            style="@style/auth_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/tilRegPasswd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtLoginAppLogo"
            tools:layout_editor_absoluteX="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="@color/gray_with_opacity"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilRegPasswd"
            style="@style/auth_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/tilConfirmPsswd"
            app:layout_constraintEnd_toEndOf="@id/tilRegEmail"
            app:layout_constraintStart_toStartOf="@id/tilRegEmail"
            app:layout_constraintTop_toBottomOf="@id/tilRegEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtTxtRegPsswd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="@color/gray_with_opacity"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilConfirmPsswd"
            style="@style/auth_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/btnLogin"
            app:layout_constraintEnd_toEndOf="@id/tilRegEmail"
            app:layout_constraintStart_toStartOf="@id/tilRegEmail"
            app:layout_constraintTop_toBottomOf="@id/tilRegPasswd">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtTxtConfirmPsswd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="@color/gray_with_opacity"
                android:hint="@string/password_confirmation"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            style="@style/button_filled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/confirm"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/tilRegEmail"
            app:layout_constraintStart_toStartOf="@id/tilRegEmail"
            app:layout_constraintTop_toBottomOf="@id/tilConfirmPsswd" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>