<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtLoginAppLogo"
            style="@style/txt_instagram_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/tilLoginEmail"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilLoginEmail"
            style="@style/auth_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/tilLoginPasswd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtLoginAppLogo"
            tools:layout_editor_absoluteX="20dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtTxtLoginEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="@color/gray_with_opacity"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilLoginPasswd"
            style="@style/auth_til"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/btnLogin"
            app:layout_constraintEnd_toEndOf="@id/tilLoginEmail"
            app:layout_constraintStart_toStartOf="@id/tilLoginEmail"
            app:layout_constraintTop_toBottomOf="@id/tilLoginEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtTxtLoginPsswd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="@color/gray_with_opacity"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progressLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="2dp"
            android:indeterminate="true"
            android:theme="@style/Widget.MaterialComponents.CircularProgressIndicator.ExtraSmall"
            android:translationZ="2dp"
            app:layout_constraintBottom_toBottomOf="@id/btnLogin"
            app:layout_constraintEnd_toEndOf="@id/btnLogin"
            app:layout_constraintStart_toStartOf="@id/btnLogin"
            app:layout_constraintTop_toTopOf="@id/btnLogin"
            app:trackCornerRadius="20dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            style="@style/ButtonThemes.Default"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:text="@string/login"
            app:layout_constraintBottom_toTopOf="@id/btnRegister"
            app:layout_constraintEnd_toEndOf="@id/tilLoginEmail"
            app:layout_constraintStart_toStartOf="@id/tilLoginEmail"
            app:layout_constraintTop_toBottomOf="@id/tilLoginPasswd" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            style="@style/ButtonThemes.Transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/tilLoginEmail"
            app:layout_constraintStart_toStartOf="@id/tilLoginEmail"
            app:layout_constraintTop_toBottomOf="@id/btnLogin" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>